conflict nowgit add .

--- a/newfile.html
+++ b/newfile.html
@@ -2,7 +2,7 @@
 
 
 <p id="paragraph">
-  hello there can it be?
+  hello  no I want it to be different !!!!  conflict please there can it be?
 </P>
 
 <p id ="second_p"> will there be a conflict!?</p>
