--- a/newfile.html
+++ b/newfile.html
@@ -1,8 +1,23 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <html>
-
-
-
-
 
 
 
@@ -18,5 +33,13 @@
 <p id ="second_p"> will there be a conflict!?</p>
 
 <script src="./newfile.js"></script>
+
+<scirpt>
+  button = document.createElement("button");
+  button.innerHTML="Press Me";
+  document.getElementById("paragraph").appendChild(button);
+</script>
+
+
 
 </html>
