here is my commit #2

--- a/newfile.html
+++ b/newfile.html
@@ -30,6 +30,8 @@
   hello  no I want it to be different !!!!  conflict please there can it be?
 </P>
 
+<p id="paragraph">
+New thing....</P>
 <p id ="second_p"> will there be a conflict!?</p>
 
 <script src="./newfile.js"></script>
